--- a/Act-2.2/Act-2.2.2/accordeon.html
+++ b/Act-2.2/Act-2.2.2/accordeon.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <!--card layout start-->
+    card layout start
     <div class="wrapper">
         <div class="a"><br></div>
         <div class="b"><br></div>
@@ -22,39 +22,39 @@
         <div class="i"><br></div>
         <div class="j"><br></div>
         <div class="k"><br></div>
-      </div>
+      </div> -->
     <!--card layout end-->
 
-  </body>
-</html>
-=======
+  <!-- </body>
+</html> -->
+<!-- ======= --> 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive CSS Card Layout using Flexbox</title>
+    <title>Responsive design</title>
     <link rel="stylesheet" href="accordeon.css">
   </head>
   <body>
 
     <!--card layout start-->
     <div class="wrapper">
-        <div class="a"><br></div>
-        <div class="b"><br></div>
-        <div class="c"><br></div>
-        <div class="d"><br></div>
-        <div class="e"><br></div>
-        <div class="f"><br></div>
-        <div class="g"><br></div>
-        <div class="h"><br></div>
-        <div class="i"><br></div>
-        <div class="j"><br></div>
-        <div class="k"><br></div>
+        <div class=" a"><br><br><br></div>
+        <div class=" b"><br></div>
+        <div class=" c"><br>1</div>
+        <div class=" d"><br>2</div>
+        <div class=" e"><br>3</div>
+        <div class=" f"><br>4</div>
+        <div class=" g"><br></div>
+        <div class=" h"><br></div>
+        <div class=" i"><br></div>
+        <div class=" j"><br></div>
+        <div class=" k"><br></div>
       </div>
     <!--card layout end-->
 
   </body>
 </html>
->>>>>>> 9798c7e615b5aec74a7897e216696de5057e7f22
+
       
