--- a/Act2.4/Act-2.4.1/index.html
+++ b/Act2.4/Act-2.4.1/index.html
@@ -36,6 +36,22 @@
         <p> Google disponible en&nbsp;:<a dir="rtl" href="https://www.google.com/setprefs?sig=0_BIoKfOE8vrhI8PTb2NwkBl6ulrA%3D&amp;hl=ar&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiGueH-3bb4AhX4RPEDHW6sDNAQ2ZgBCA4">العربية</a></p>
     </div>
   </section>
+  <footer>
+    <div class="barre1"><div class="pays"> Tunisie</div></div>
+    <div class="barre2">
+      <div class="left">
+    <a href="https://ads.google.com"> Publicité </a>
+  
+    <a href="http://google.com/services.com">&nbsp;&nbsp;&nbsp;&nbsp;Entreprises </a>
+    <a href="http://about.google.com"> &nbsp;&nbsp;&nbsp;&nbsp;A propos </a>
+    <a href="http://google.com/search"> &nbsp;&nbsp;&nbsp;&nbsp; Comment fonctionne la recherche Google ? </a>
+    </div>
+    <div class ="right">
+    <a href="http://google.com/confi"> &nbsp;&nbsp;&nbsp;&nbsp;Confidentialité </a>
+    <a href="http://google.com/intl"> &nbsp;&nbsp;&nbsp;&nbsp;Conditions </a>
+    <a href="http://google.com/preferences">&nbsp;&nbsp;&nbsp;&nbsp;Paramètres </a></div>
+    </div>
+    </footer>
 </body>
 </html>
 
