--- a/Act-2.5.2/index.html
+++ b/Act-2.5.2/index.html
@@ -16,7 +16,7 @@
   <label for="ideas">Courses:</label><br>
   <input type="text" id="ideas"  placeholder="add courses"><br>
   
-  <input type="submit" onclick="myFunction()" id="Submit"  value="submit">
+  <input type="button" onclick="myFunction()" id="Submit"  value="submit">
   <div id='result'>
     <ul></ul>
   </div>
